corrections managers and contracts, add an item is possible and compass run correctly bad news -> the precision of the locatisation

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,12 +6,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".LocationActivity" >
+    tools:context=".UtilLocationManager" >
 
     <fragment 
       android:id="@+id/fragment_map"
       android:name="com.google.android.gms.maps.MapFragment"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
-      
+    
 </RelativeLayout>
