--- a/res/layout/activity_listpoint.xml
+++ b/res/layout/activity_listpoint.xml
@@ -39,4 +39,10 @@
         android:text="List of points"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+    <fragment 
+      android:id="@+id/fragment_map"
+      android:name="com.google.android.gms.maps.MapFragment"
+      android:layout_width="0dp"
+      android:layout_height="0dp"/>
+    
 </RelativeLayout>
